# DetectorAiEssay

./: .gitignore  Dockerfile  LiidClassifierModel.py  ONNXTest.py  README.md  TestBert.ipynb  baseline.ipynb  convert_to_onnx.py  datasetReserch.ipynb  docker-compose.yml  main.py  onnxtestrun.py  pyproject.toml
notebook/: TestBert.ipynb  baseline.ipynb  detectoraiessay.ipynb
