[tool.poetry]
name = "detectoraiessay"
version = "0.1.0"
description = ""
authors = ["Liid <51267703+L11D@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
torch = "^2.3.0"
transformers = "^4.40.1"
jupyter = "^1.0.0"
datasets = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
